--- a/Day_1/Day_1.ipynb
+++ b/Day_1/Day_1.ipynb
@@ -1,21 +1,34 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "input_file_text = Path(r\"M:\\Python\\Projects\\AdventOfCode\\Day_1_2\\Day_1_2_input.txt\").read_text(encoding='utf-8')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "input_file_text = Path(r\"M:\\Python\\Projects\\AdventOfCode\\Day_1\\Day_1_1_input.txt\").read_text(encoding='utf-8')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "values = [int(val) for val in input_file_text.split()]"
@@ -29,7 +42,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1711\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_increase_in_depth(values):\n",
+    "    previous = float(\"inf\")\n",
+    "    count = 0\n",
+    "    for val in values:\n",
+    "        if val > previous:\n",
+    "            count += 1\n",
+    "        previous = val\n",
+    "    print(count)\n",
+    "count_increase_in_depth(values)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "input_file_text = Path(r\"M:\\Python\\Projects\\AdventOfCode\\Day_1\\Day_1_2_input.txt\").read_text(encoding='utf-8')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "values = [int(val) for val in input_file_text.split()]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "from collections import deque\n",
@@ -60,28 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [],
-   "source": [
-    "def count_increase_in_depth(values):\n",
-    "    previous = float(\"inf\")\n",
-    "    count = 0\n",
-    "    for val in values:\n",
-    "        if val > previous:\n",
-    "            count += 1\n",
-    "        previous = val\n",
-    "    print(count)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
