Refactoring - single day folder and single notebook for it

--- a/Day_2/Day_2.ipynb
+++ b/Day_2/Day_2.ipynb
@@ -11,7 +11,7 @@
     "import typing\n",
     "from pathlib import Path\n",
     "\n",
-    "input_file_text = Path(r\"M:\\Python\\Projects\\AdventOfCode\\Day_2_1\\Day_2_1_input.txt\").read_text(encoding='utf-8')"
+    "input_file_text = Path(r\"M:\\Python\\Projects\\AdventOfCode\\Day_2\\Day_2_1_input.txt\").read_text(encoding='utf-8')"
    ]
   },
   {
