Finished second part of the Day 2

--- a/Day_2/Day_2.ipynb
+++ b/Day_2/Day_2.ipynb
@@ -2,21 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import typing\n",
+    "from enum import Enum\n",
     "from pathlib import Path\n",
     "\n",
-    "input_file_text = Path(r\"M:\\Python\\Projects\\AdventOfCode\\Day_2\\Day_2_1_input.txt\").read_text(encoding='utf-8')"
+    "\n",
+    "class Commands(str, Enum):\n",
+    "    FORWARD = \"forward\"\n",
+    "    DOWN = \"down\"\n",
+    "    UP = \"up\"\n",
+    "\n",
+    "\n",
+    "class Position(typing.NamedTuple):\n",
+    "    depth: int\n",
+    "    horizontal_position: int\n",
+    "    aim: int = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "input_file_text = Path(r\"M:\\Python\\Projects\\AdventOfCode\\Day_2\\Day_2_input.txt\").read_text(encoding='utf-8')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -27,19 +52,6 @@
     }
    ],
    "source": [
-    "import typing\n",
-    "from enum import Enum\n",
-    "\n",
-    "\n",
-    "class Commands(str, Enum):\n",
-    "    FORWARD = \"forward\"\n",
-    "    DOWN = \"down\"\n",
-    "    UP = \"up\"\n",
-    "\n",
-    "class Position(typing.NamedTuple):\n",
-    "    depth: int\n",
-    "    horizontal_position: int\n",
-    "\n",
     "def calculate_position(commands: list[str]) -> Position:\n",
     "    depth = 0\n",
     "    horizontal_position = 0\n",
@@ -61,6 +73,83 @@
     "\n",
     "\n",
     "position = calculate_position(input_file_text.strip().split(\"\\n\"))\n",
+    "print(f\"Answer: {position.depth * position.horizontal_position}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "def calculate_position_with_aim(commands: list[str]) -> Position:\n",
+    "    depth = 0\n",
+    "    horizontal_position = 0\n",
+    "    aim = 0\n",
+    "    for command in commands:\n",
+    "        match command.split(\" \"):\n",
+    "            case [Commands.FORWARD, value]:\n",
+    "                # print(f\"Forward: {value}\")\n",
+    "                horizontal_position += int(value)\n",
+    "                depth += aim * int(value)\n",
+    "            case [Commands.DOWN, value]:\n",
+    "                # print(f\"Down: {value}\")\n",
+    "                aim += int(value)\n",
+    "            case [Commands.UP, value]:\n",
+    "                # print(f\"Up: {value}\")\n",
+    "                aim -= int(value)\n",
+    "            case _:\n",
+    "                print(f\"Default case, value: {command} not understood\")\n",
+    "    return Position(depth=depth, horizontal_position=horizontal_position, aim=aim)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "def test_calculate_position_with_aim():\n",
+    "    commands = [\"forward 5\", \"down 5\", \"forward 8\", \"up 3\", \"down 8\", \"forward 2\"]\n",
+    "    result_position = calculate_position_with_aim(commands)\n",
+    "    result = result_position.horizontal_position * result_position.depth\n",
+    "    expected = 900\n",
+    "    assert result == expected, f\"Result: {result}, expected: {expected}\"\n",
+    "\n",
+    "\n",
+    "test_calculate_position_with_aim()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer: 1813062561\n"
+     ]
+    }
+   ],
+   "source": [
+    "position = calculate_position_with_aim(input_file_text.strip().split(\"\\n\"))\n",
     "print(f\"Answer: {position.depth * position.horizontal_position}\")"
    ],
    "metadata": {
