Divided code into functions, starting work on oxygen rating

--- a/Day_3/Day_3.ipynb
+++ b/Day_3/Day_3.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from collections import Counter\n",
-    "\n",
-    "input_file = Path(r\"M:\\Python\\Projects\\AdventOfCode\\Day_3\\Day_3_input.txt\")"
+    "from collections import Counter\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "outputs": [],
    "source": [
-    "input_data = input_file.read_text().split('\\n')"
+    "def get_input_data():\n",
+    "    input_file = Path(r\"M:\\Python\\Projects\\AdventOfCode\\Day_3\\Day_3_input.txt\")\n",
+    "    return input_file.read_text().strip().split('\\n')\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -30,10 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "outputs": [],
    "source": [
-    "counters = [Counter() for _ in input_data[0]]"
+    "def transpose_input_data(input_data):\n",
+    "    return [*zip(*input_data)]"
    ],
    "metadata": {
     "collapsed": false,
@@ -44,12 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "outputs": [],
    "source": [
-    "for line in input_data:\n",
-    "    for index, bit in enumerate(line):\n",
-    "        counters[index][bit] += 1"
+    "def calculate_power_consumption():\n",
+    "    input_data = get_input_data()\n",
+    "    transposed_input_data = transpose_input_data(input_data)\n",
+    "    counters = [Counter(entry) for entry in transposed_input_data]\n",
+    "    gamma_rate_bin = ''.join((counter.most_common()[0][0] for counter in counters))\n",
+    "    epsilon_rate_bin = ''.join((counter.most_common()[-1][0] for counter in counters))\n",
+    "    gamma_rate = int(gamma_rate_bin, 2)\n",
+    "    epsilon_rate = int(epsilon_rate_bin, 2)\n",
+    "    power_consumption = gamma_rate * epsilon_rate\n",
+    "    return power_consumption"
    ],
    "metadata": {
     "collapsed": false,
@@ -60,50 +68,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "outputs": [],
-   "source": [
-    "gamma_rate_bin = ''.join((counter.most_common()[0][0] for counter in counters))\n",
-    "epsilon_rate_bin = ''.join((counter.most_common()[-1][0] for counter in counters))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "outputs": [],
-   "source": [
-    "gamma_rate = int(gamma_rate_bin, 2)\n",
-    "epsilon_rate = int(epsilon_rate_bin, 2)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "outputs": [
     {
-     "data": {
-      "text/plain": "3148794"
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3148794\n"
+     ]
     }
    ],
    "source": [
-    "power_consumption = gamma_rate * epsilon_rate\n",
-    "power_consumption"
+    "print(calculate_power_consumption())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [],
+   "source": [
+    "def get_oxygen_generator_rating(input_data):\n",
+    "    pass"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [],
+   "source": [
+    "def test_get_oxygen_generator_rating():\n",
+    "    input_data = [\n",
+    "        '00100',\n",
+    "        '11110',\n",
+    "        '10110',\n",
+    "        '10111',\n",
+    "        '10101',\n",
+    "        '01111',\n",
+    "        '00111',\n",
+    "        '11100',\n",
+    "        '10000',\n",
+    "        '11001',\n",
+    "        '00010',\n",
+    "        '01010',\n",
+    "    ]\n",
+    "    expected_oxygen_rating = '10111'\n",
+    "    assert expected_oxygen_rating == get_oxygen_generator_rating(input_data)"
    ],
    "metadata": {
     "collapsed": false,
