--- a/Day_3/Day_3.ipynb
+++ b/Day_3/Day_3.ipynb
@@ -45,13 +45,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
+   "outputs": [],
+   "source": [
+    "def get_counters_based_on_input_data(input_data):\n",
+    "    transposed_input_data = transpose_input_data(input_data)\n",
+    "    counters = [Counter(entry) for entry in transposed_input_data]\n",
+    "    return counters"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "outputs": [],
    "source": [
     "def calculate_power_consumption():\n",
     "    input_data = get_input_data()\n",
-    "    transposed_input_data = transpose_input_data(input_data)\n",
-    "    counters = [Counter(entry) for entry in transposed_input_data]\n",
+    "    counters = get_counters_based_on_input_data(input_data)\n",
     "    gamma_rate_bin = ''.join((counter.most_common()[0][0] for counter in counters))\n",
     "    epsilon_rate_bin = ''.join((counter.most_common()[-1][0] for counter in counters))\n",
     "    gamma_rate = int(gamma_rate_bin, 2)\n",
@@ -68,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "outputs": [
     {
      "name": "stdout",
@@ -90,11 +106,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "outputs": [],
    "source": [
-    "def get_oxygen_generator_rating(input_data):\n",
-    "    pass"
+    "def get_oxygen_generator_rating(input_data: list[str], position: int) -> str:\n",
+    "    if len(input_data) == 1:\n",
+    "        return input_data[0]\n",
+    "    counters = get_counters_based_on_input_data(input_data)\n",
+    "    counter_for_position = counters[position]\n",
+    "    if counter_for_position['1'] != counter_for_position['0']:\n",
+    "        bit_to_check_against = counter_for_position.most_common()[0][0]\n",
+    "    else:\n",
+    "        bit_to_check_against = '1'\n",
+    "    filtered_input_data = [input_line for input_line in input_data if input_line[position] == bit_to_check_against]\n",
+    "    return get_oxygen_generator_rating(filtered_input_data, position+1)"
    ],
    "metadata": {
     "collapsed": false,
@@ -105,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "def test_get_oxygen_generator_rating():\n",
@@ -124,7 +149,8 @@
     "        '01010',\n",
     "    ]\n",
     "    expected_oxygen_rating = '10111'\n",
-    "    assert expected_oxygen_rating == get_oxygen_generator_rating(input_data)"
+    "    assert expected_oxygen_rating == get_oxygen_generator_rating(input_data, 0)\n",
+    "test_get_oxygen_generator_rating()"
    ],
    "metadata": {
     "collapsed": false,
