Added code and test for scrubber rating

--- a/Day_3/Day_3.ipynb
+++ b/Day_3/Day_3.ipynb
@@ -158,6 +158,61 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "outputs": [],
+   "source": [
+    "def get_co2_scrubber_rating(input_data: list[str], position: int) -> str:\n",
+    "    if len(input_data) == 1:\n",
+    "        return input_data[0]\n",
+    "    counters = get_counters_based_on_input_data(input_data)\n",
+    "    counter_for_position = counters[position]\n",
+    "    if counter_for_position['1'] != counter_for_position['0']:\n",
+    "        bit_to_check_against = counter_for_position.most_common()[-1][0]\n",
+    "    else:\n",
+    "        bit_to_check_against = '0'\n",
+    "    filtered_input_data = [input_line for input_line in input_data if input_line[position] == bit_to_check_against]\n",
+    "    return get_co2_scrubber_rating(filtered_input_data, position+1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "outputs": [],
+   "source": [
+    "def test_get_co2_scrubber_rating():\n",
+    "    input_data = [\n",
+    "        '00100',\n",
+    "        '11110',\n",
+    "        '10110',\n",
+    "        '10111',\n",
+    "        '10101',\n",
+    "        '01111',\n",
+    "        '00111',\n",
+    "        '11100',\n",
+    "        '10000',\n",
+    "        '11001',\n",
+    "        '00010',\n",
+    "        '01010',\n",
+    "    ]\n",
+    "    expected_co2_scrubber_rating = '01010'\n",
+    "    assert expected_co2_scrubber_rating == get_co2_scrubber_rating(input_data, 0)\n",
+    "test_get_co2_scrubber_rating()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
