--- a/Day_3/Day_3.ipynb
+++ b/Day_3/Day_3.ipynb
@@ -106,12 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "outputs": [],
    "source": [
-    "def get_oxygen_generator_rating(input_data: list[str], position: int) -> str:\n",
+    "def get_oxygen_generator_rating(input_data: list[str], position: int) -> int:\n",
     "    if len(input_data) == 1:\n",
-    "        return input_data[0]\n",
+    "        return int(input_data[0], 2)\n",
     "    counters = get_counters_based_on_input_data(input_data)\n",
     "    counter_for_position = counters[position]\n",
     "    if counter_for_position['1'] != counter_for_position['0']:\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "def test_get_oxygen_generator_rating():\n",
@@ -148,7 +148,7 @@
     "        '00010',\n",
     "        '01010',\n",
     "    ]\n",
-    "    expected_oxygen_rating = '10111'\n",
+    "    expected_oxygen_rating = 23\n",
     "    assert expected_oxygen_rating == get_oxygen_generator_rating(input_data, 0)\n",
     "test_get_oxygen_generator_rating()"
    ],
@@ -161,12 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 76,
    "outputs": [],
    "source": [
-    "def get_co2_scrubber_rating(input_data: list[str], position: int) -> str:\n",
+    "def get_co2_scrubber_rating(input_data: list[str], position: int) -> int:\n",
     "    if len(input_data) == 1:\n",
-    "        return input_data[0]\n",
+    "        return int(input_data[0], 2)\n",
     "    counters = get_counters_based_on_input_data(input_data)\n",
     "    counter_for_position = counters[position]\n",
     "    if counter_for_position['1'] != counter_for_position['0']:\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "outputs": [],
    "source": [
     "def test_get_co2_scrubber_rating():\n",
@@ -203,10 +203,22 @@
     "        '00010',\n",
     "        '01010',\n",
     "    ]\n",
-    "    expected_co2_scrubber_rating = '01010'\n",
+    "    expected_co2_scrubber_rating = 10\n",
     "    assert expected_co2_scrubber_rating == get_co2_scrubber_rating(input_data, 0)\n",
     "test_get_co2_scrubber_rating()"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
