--- a/Day_3/Day_3.ipynb
+++ b/Day_3/Day_3.ipynb
@@ -106,10 +106,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 78,
    "outputs": [],
    "source": [
-    "def get_oxygen_generator_rating(input_data: list[str], position: int) -> int:\n",
+    "def get_oxygen_generator_rating(input_data: list[str], position: int = 0) -> int:\n",
     "    if len(input_data) == 1:\n",
     "        return int(input_data[0], 2)\n",
     "    counters = get_counters_based_on_input_data(input_data)\n",
@@ -119,7 +119,7 @@
     "    else:\n",
     "        bit_to_check_against = '1'\n",
     "    filtered_input_data = [input_line for input_line in input_data if input_line[position] == bit_to_check_against]\n",
-    "    return get_oxygen_generator_rating(filtered_input_data, position+1)"
+    "    return get_oxygen_generator_rating(filtered_input_data, position + 1)"
    ],
    "metadata": {
     "collapsed": false,
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 79,
    "outputs": [],
    "source": [
     "def test_get_oxygen_generator_rating():\n",
@@ -150,6 +150,8 @@
     "    ]\n",
     "    expected_oxygen_rating = 23\n",
     "    assert expected_oxygen_rating == get_oxygen_generator_rating(input_data, 0)\n",
+    "\n",
+    "\n",
     "test_get_oxygen_generator_rating()"
    ],
    "metadata": {
@@ -161,10 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 80,
    "outputs": [],
    "source": [
-    "def get_co2_scrubber_rating(input_data: list[str], position: int) -> int:\n",
+    "# TODO - could be simplified as it is very similar to oxygen one\n",
+    "def get_co2_scrubber_rating(input_data: list[str], position: int = 0) -> int:\n",
     "    if len(input_data) == 1:\n",
     "        return int(input_data[0], 2)\n",
     "    counters = get_counters_based_on_input_data(input_data)\n",
@@ -174,7 +177,7 @@
     "    else:\n",
     "        bit_to_check_against = '0'\n",
     "    filtered_input_data = [input_line for input_line in input_data if input_line[position] == bit_to_check_against]\n",
-    "    return get_co2_scrubber_rating(filtered_input_data, position+1)"
+    "    return get_co2_scrubber_rating(filtered_input_data, position + 1)"
    ],
    "metadata": {
     "collapsed": false,
@@ -185,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 81,
    "outputs": [],
    "source": [
     "def test_get_co2_scrubber_rating():\n",
@@ -205,6 +208,8 @@
     "    ]\n",
     "    expected_co2_scrubber_rating = 10\n",
     "    assert expected_co2_scrubber_rating == get_co2_scrubber_rating(input_data, 0)\n",
+    "\n",
+    "\n",
     "test_get_co2_scrubber_rating()"
    ],
    "metadata": {
@@ -216,9 +221,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 83,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2795310\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_life_support_rating():\n",
+    "    input_data = get_input_data()\n",
+    "    oxygen_generator_rating = get_oxygen_generator_rating(input_data)\n",
+    "    co2_scrubber_rating = get_co2_scrubber_rating(input_data)\n",
+    "    return oxygen_generator_rating * co2_scrubber_rating\n",
+    "print(get_life_support_rating())"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
