Divided part of the functions

--- a/Day_5/Day_5.ipynb
+++ b/Day_5/Day_5.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from typing import NamedTuple"
+    "from typing import NamedTuple, List"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "class Point(NamedTuple):\n",
@@ -61,7 +61,7 @@
     "    # print(f\"{line = }\")\n",
     "\n",
     "\n",
-    "def get_line_by_x(line, point_a, point_b):\n",
+    "def get_line_by_x(point_a, point_b):\n",
     "    lower_y = min(point_a.y, point_b.y)\n",
     "    higher_y = max(point_a.y, point_b.y)\n",
     "    # print(f\"{point_a} and {point_b} are on the same line by X\")\n",
@@ -77,12 +77,18 @@
     "    return max_size\n",
     "\n",
     "\n",
-    "def get_horizontal_and_vertical_lines(input_data: list[str]):\n",
-    "    lines = []\n",
+    "def get_all_points(input_data: list[str]) -> list[list[Point]]:\n",
+    "    points_pairs: list[list[Point]] = []\n",
     "    for line in input_data:\n",
-    "        point_a, point_b = [Point(*[int(val) for val in point_data.split(\",\")]) for point_data in line.split(\" -> \")]\n",
+    "        points_pairs.append([Point(*[int(val) for val in point_data.split(\",\")]) for point_data in line.split(\" -> \")])\n",
+    "    return points_pairs\n",
+    "\n",
+    "def get_horizontal_and_vertical_lines(input_data: list[str]):\n",
+    "    points = get_all_points(input_data)\n",
+    "    lines = []\n",
+    "    for point_a, point_b in points:\n",
     "        if point_a.x == point_b.x:\n",
-    "            lines.append(get_line_by_x(line, point_a, point_b))\n",
+    "            lines.append(get_line_by_x(point_a, point_b))\n",
     "        if point_a.y == point_b.y:\n",
     "            lines.append(get_line_by_y(point_a, point_b))\n",
     "    return lines\n"
@@ -96,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "def get_floor_mapping(size, lines):\n",
@@ -141,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "def test_get_number_of_overlapping_points():\n",
@@ -162,19 +168,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 74,
    "outputs": [
     {
      "data": {
       "text/plain": "6225"
      },
-     "execution_count": 66,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "get_number_of_overlapping_points(get_input_data())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def get_all_lines(input_data: list[str]):\n"
    ],
    "metadata": {
     "collapsed": false,
