Corrected handling of finding line between two points

--- a/Day_5/Day_5.ipynb
+++ b/Day_5/Day_5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def get_input_data():\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "class Point(NamedTuple):\n",
@@ -83,6 +83,7 @@
     "        points_pairs.append([Point(*[int(val) for val in point_data.split(\",\")]) for point_data in line.split(\" -> \")])\n",
     "    return points_pairs\n",
     "\n",
+    "\n",
     "def get_horizontal_and_vertical_lines(input_data: list[str]):\n",
     "    points = get_all_points(input_data)\n",
     "    lines = []\n",
@@ -91,27 +92,20 @@
     "            lines.append(get_line_by_x(point_a, point_b))\n",
     "        if point_a.y == point_b.y:\n",
     "            lines.append(get_line_by_y(point_a, point_b))\n",
-    "    return lines\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "outputs": [],
-   "source": [
+    "    return lines\n",
+    "\n",
     "def get_floor_mapping(size, lines):\n",
     "    floor = []\n",
-    "    for _ in range(size):\n",
-    "        floor.append([0] * size)\n",
+    "    for _ in range(size+1):\n",
+    "        floor.append([0] * (size+1))\n",
     "    for line in lines:\n",
     "        for point in line:\n",
-    "            floor[point.x - 1][point.y - 1] += 1\n",
+    "            # assert point.x-1 <= size and point.y-1 <= size, f\"Point is out of scope: {point =} and {size =}\"\n",
+    "            try:\n",
+    "                floor[point.x - 1][point.y - 1] += 1\n",
+    "            except IndexError:\n",
+    "                print(f\"{point =}\")\n",
+    "                raise\n",
     "    return floor\n",
     "\n",
     "\n",
@@ -126,30 +120,15 @@
     "\n",
     "def get_number_of_overlapping_points(input_data):\n",
     "    max_size = get_max_size(input_data)\n",
-    "    # print(f\"{max_size = }\")\n",
     "    lines = get_horizontal_and_vertical_lines(input_data)\n",
-    "    # print(f\"{lines = }\")\n",
     "\n",
     "    floor = get_floor_mapping(max_size, lines)\n",
-    "    # print(f\"{floor = }\")\n",
     "\n",
     "    count = get_overlapped_lines(floor)\n",
-    "    # print(f\"{count =}\")\n",
     "\n",
-    "    return count"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "outputs": [],
-   "source": [
+    "    return count\n",
+    "\n",
+    "\n",
     "def test_get_number_of_overlapping_points():\n",
     "    input_data = get_test_input_data()\n",
     "    number_of_overlaps = get_number_of_overlapping_points(input_data)\n",
@@ -157,7 +136,45 @@
     "    assert expected_number_of_overlaps == number_of_overlaps, f\"{number_of_overlaps = }, {expected_number_of_overlaps = }\"\n",
     "\n",
     "\n",
-    "test_get_number_of_overlapping_points()"
+    "def get_all_lines(input_data: list[str]):\n",
+    "    points = get_all_points(input_data)\n",
+    "    lines = []\n",
+    "\n",
+    "    for point_a, point_b in points:\n",
+    "        if point_a.x == point_b.x:\n",
+    "            lines.append(get_line_by_x(point_a, point_b))\n",
+    "        elif point_a.y == point_b.y:\n",
+    "            lines.append(get_line_by_y(point_a, point_b))\n",
+    "        else:\n",
+    "            change_y = -1 if point_b.y < point_a.y else 1\n",
+    "            change_x = -1 if point_b.x < point_a.x else 1\n",
+    "            number_of_points_to_create = abs(point_a.x - point_b.x) + 1\n",
+    "            lines.append(\n",
+    "                [Point(point_a.x + change_x * increment, point_a.y + change_y * increment) for increment in\n",
+    "                 range(number_of_points_to_create)]\n",
+    "            )\n",
+    "    return lines\n",
+    "\n",
+    "\n",
+    "def get_number_of_overlapping_points_with_diagonal(input_data):\n",
+    "    max_size = get_max_size(input_data)\n",
+    "    lines = get_all_lines(input_data)\n",
+    "\n",
+    "    floor = get_floor_mapping(max_size, lines)\n",
+    "\n",
+    "    count = get_overlapped_lines(floor)\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "\n",
+    "def test_get_number_of_overlapping_points_with_diagonal():\n",
+    "    input_data = get_test_input_data()\n",
+    "    number_of_overlaps = get_number_of_overlapping_points_with_diagonal(input_data)\n",
+    "    expected_number_of_overlaps = 12\n",
+    "    assert expected_number_of_overlaps == number_of_overlaps, f\"{number_of_overlaps = }, {expected_number_of_overlaps = }\"\n",
+    "\n",
+    "\n",
+    "test_get_number_of_overlapping_points_with_diagonal()"
    ],
    "metadata": {
     "collapsed": false,
@@ -168,33 +185,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
-      "text/plain": "6225"
+      "text/plain": "22116"
      },
-     "execution_count": 74,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_number_of_overlapping_points(get_input_data())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "def get_all_lines(input_data: list[str]):\n"
+    "get_number_of_overlapping_points_with_diagonal(get_input_data())"
    ],
    "metadata": {
     "collapsed": false,
